Misc code cleanup/suppress Sonar warnings